--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-      "DefualtConnection": "Data Source=.;Initial Catalog=WeatherInfo;Integrated Security=True;Trust Server Certificate=True"
+    "DefaultConnection": "Data Source=.;Initial Catalog=WeatherInfo;Integrated Security=True;Trust Server Certificate=True"
   },
   "Logging": {
     "LogLevel": {
